# garnet

lib/: BUILD.gn
lib/gzos/test/: BUILD.gn
lib/gzos/trusty_virtio/: BUILD.gn  shared_mem.cc  shared_mem.h  trusty_virtio_device-unittest.cc
lib/machina/: BUILD.gn  virtio_balloon.cc  virtio_balloon.h  virtio_block-unittest.cc  virtio_block.cc  virtio_block.h  virtio_console.cc  virtio_console.h  virtio_device.cc  virtio_device.h  virtio_gpu-unittest.cc  virtio_gpu.cc  virtio_gpu.h  virtio_input.cc  virtio_input.h  virtio_net-unittest.cc  virtio_net.cc  virtio_net.h  virtio_pci.h  virtio_queue-unittest.cc  virtio_transport.h  virtio_transport_fake.h
lib/tipc/: BUILD.gn  io.cc  phys_mem.cc  phys_mem_fake.h  virtio.cc  virtio.h  virtio_device.cc  virtio_device.h  virtio_queue-unittest.cc  virtio_queue.cc  virtio_queue_fake.cc  virtio_queue_fake.h
lib/trusty/: BUILD.gn  linux_fake.h  shared_mem.cc  shared_mem.h  tipc_device-unittest.cc  tipc_device.cc  tipc_device.h  virtio_device.cc  virtio_device.h  virtio_queue.cc  virtio_queue.h  virtio_queue_fake.cc  virtio_queue_fake.h
public/fidl/gzos.ipc.test/: BUILD.gn  echo.fidl
public/lib/gzos/ree_agent/cpp/: BUILD.gn  rpc_channel.cc  rpc_channel.h
public/lib/gzos/sysmgr/fidl/: service_provider.fidl  service_registry.fidl
public/lib/gzos/trusty_app/: BUILD.gn  manifest.cc  manifest.h  trusty_ipc.cc  trusty_std.h  trusty_syscalls.h
public/lib/gzos/trusty_app/cpp/: BUILD.gn  trusty_ipc.cc
public/lib/gzos/trusty_ipc/cpp/: BUILD.gn  channel.cc  channel.h  object-unittest.cc  object.cc  object.h  object_set.cc  object_set.h  port.cc  port.h
public/lib/gzos/trusty_ipc/fidl/: channel.fidl
public/lib/ree_agent/cpp/: BUILD.gn  application_context.cc  application_context.h  channel.cc  channel.h  handle.cc  handle.h  id_alloc.h  msg_item.h  object.cc  object.h  object_manager.cc  object_manager.h  object_set.cc  object_set.h  port.cc  port.h
public/lib/ree_agent/fidl/: BUILD.gn  channel.fidl  controller.fidl  launcher.fidl  port.fidl  ree_message.fidl  status.fidl
