# Copyright 2018 Open Trust Group. All rights reserved.
# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

shared_library("tipc") {
  sources = [
    "virtio.cc",
    "virtio.h",
  ]

  public_deps = [
    "//zircon/public/lib/ddk",
    "//zircon/public/lib/hypervisor",
    "//zircon/public/lib/virtio",
    "//zircon/public/lib/zx",
  ]

  defines = [ "_ALL_SOURCE=1" ]

  deps = [
    "//garnet/public/lib/fxl",
    "//zircon/public/lib/async-cpp",
    "//zircon/public/lib/async-loop-cpp",
    "//zircon/public/lib/fdio",
    "//zircon/public/lib/sync",
    "//zircon/public/lib/block-client",
    "//zircon/public/lib/fbl",
    "//zircon/public/lib/hypervisor",
    "//zircon/public/lib/zxcpp",
  ]

  # TODO(ZX-1411): Add visibility annotations to code and remove this.
  configs -= [ "//build/config:symbol_visibility_hidden" ]
}

executable("tipc_unittests") {
  testonly = true

  sources = [
    "run_all_unittests.cc",
    "virtio-unittest.cc",
    "virtio_queue_fake.cc",
    "virtio_queue_fake.h",
    "phys_mem_fake.h",
  ]

  deps = [
    ":tipc",
    "//third_party/gtest",
    "//zircon/public/lib/ddk",
    "//zircon/public/lib/fbl",
  ]
}

package("tipc_tests") {
  testonly = true
  system_image = true

  deps = [
    ":tipc_unittests",
  ]

  tests = [ {
        name = "tipc_unittests"
      } ]
}
