# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

shared_library("tipc") {
  sources = [
    "io.cc",
    "io.h",
    "phys_mem.cc",
    "phys_mem.h",
    "virtio_queue.cc",
    "virtio_queue.h",
    "virtio_device.cc",
    "virtio_device.h",
  ]

  public_deps = [
    "//garnet/public/lib/app/cpp",
    "//zircon/public/lib/ddk",
    "//zircon/public/lib/virtio",
    "//zircon/public/lib/zx",
  ]

  defines = [ "_ALL_SOURCE=1" ]

  deps = [
    "//garnet/public/lib/fsl",
    "//garnet/public/lib/fxl",
    "//zircon/public/lib/zxcpp",
  ]

  # TODO(SY): disable unused private field warnning for now
  # remove this after the SMC transport layer being implemented
  configs += [ "//build/config:no_unused_private_field" ]

  # TODO(ZX-1411): Add visibility annotations to code and remove this.
  configs -= [ "//build/config:symbol_visibility_hidden" ]
}

executable("tipc_unittests") {
  testonly = true

  sources = [
    "run_all_unittests.cc",
    "virtio_queue-unittest.cc",
    "virtio_queue_fake.cc",
    "virtio_queue_fake.h",
  ]

  deps = [
    ":tipc",
    "//third_party/googletest:gtest",
    "//zircon/public/lib/ddk",
    "//zircon/public/lib/fbl",
  ]
}

package("tipc_tests") {
  testonly = true
  system_image = true

  deps = [
    ":tipc_unittests",
  ]

  tests = [
    {
      name = "tipc_unittests"
    },
  ]
}
