# Copyright 2018 Open Trust Group
# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("cpp") {
  sources = [
    "application_context.cc",
    "application_context.h",
  ]

  public_deps = [
    "//garnet/public/lib/app/fidl",
    "//garnet/public/lib/fidl/cpp",
    "//garnet/public/lib/fxl",
    "//garnet/public/lib/svc/cpp",
  ]
}
