# Copyright 2018 Open Trust Group
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("cpp") {
  sources = [
    "trusty_ipc.h",
    "trusty_ipc.cc",
    "trusty_std.h",
    "trusty_syscalls.h",
    "trusty_unittest.h",
    "trusty_uuid.h",
  ]

  public_deps = [
    "//garnet/public/lib/gzos/trusty_ipc/cpp",
    "//garnet/public/lib/gzos/trusty_ipc/fidl",
  ]
}
